--- a/src/alog/view/FrmGui.form
+++ b/src/alog/view/FrmGui.form
@@ -50,14 +50,14 @@
                           <Component id="jScrollPane7" alignment="0" min="-2" pref="443" max="-2" attributes="0"/>
                           <Component id="jLabel3" alignment="0" min="-2" max="-2" attributes="0"/>
                           <Group type="102" alignment="0" attributes="0">
-                              <Component id="btnVerificar" min="-2" pref="102" max="-2" attributes="0"/>
-                              <EmptySpace min="-2" pref="118" max="-2" attributes="0"/>
+                              <Component id="btnVerificar" min="-2" pref="160" max="-2" attributes="0"/>
+                              <EmptySpace min="-2" pref="85" max="-2" attributes="0"/>
                               <Component id="btnInicioPerc" min="-2" max="-2" attributes="0"/>
                               <EmptySpace max="-2" attributes="0"/>
                               <Component id="btnProxPerc" min="-2" max="-2" attributes="0"/>
                           </Group>
                       </Group>
-                      <EmptySpace min="0" pref="433" max="32767" attributes="0"/>
+                      <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
                   </Group>
               </Group>
               <EmptySpace max="-2" attributes="0"/>
@@ -68,10 +68,10 @@
       <Group type="103" groupAlignment="0" attributes="0">
           <Group type="102" alignment="0" attributes="0">
               <EmptySpace max="-2" attributes="0"/>
-              <Group type="103" groupAlignment="3" attributes="0">
-                  <Component id="btnInicioPerc" alignment="3" min="-2" max="-2" attributes="0"/>
-                  <Component id="btnProxPerc" alignment="3" min="-2" max="-2" attributes="0"/>
-                  <Component id="btnVerificar" alignment="3" min="-2" max="-2" attributes="0"/>
+              <Group type="103" groupAlignment="0" max="-2" attributes="0">
+                  <Component id="btnVerificar" pref="38" max="32767" attributes="0"/>
+                  <Component id="btnInicioPerc" alignment="0" max="32767" attributes="0"/>
+                  <Component id="btnProxPerc" alignment="0" max="32767" attributes="0"/>
               </Group>
               <EmptySpace max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" max="-2" attributes="0">
@@ -118,7 +118,6 @@
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
               <Font name="Consolas" size="12" style="0"/>
             </Property>
-            <Property name="text" type="java.lang.String" value="In&#xed;cio&#xa;    Caracter: Nome;&#xa;    Inteiro: Idade;&#xa;    Real: Altura, CentPorDia &lt;- 0;&#xa;    &#xa;    Leia(Nome, Idade, Altura);&#xa;    &#xa;    Idade &lt;- Idade * 365.25;&#xa;    CentPorDia &lt;- Altura / Idade;&#xa;    &#xa;    Escreva(Nome,&quot; tem &quot;,CentPorDia,&quot; cent&#xed;metros por dia de vida&quot;);&#xa;Fim"/>
           </Properties>
           <Events>
             <EventHandler event="keyReleased" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="txpIdeKeyReleased"/>
@@ -128,7 +127,7 @@
     </Container>
     <Component class="javax.swing.JButton" name="btnInicioPerc">
       <Properties>
-        <Property name="text" type="java.lang.String" value="|&lt;"/>
+        <Property name="text" type="java.lang.String" value="|&lt; In&#xed;cio"/>
         <Property name="enabled" type="boolean" value="false"/>
       </Properties>
       <Events>
@@ -137,7 +136,7 @@
     </Component>
     <Component class="javax.swing.JButton" name="btnProxPerc">
       <Properties>
-        <Property name="text" type="java.lang.String" value="&gt;&gt;"/>
+        <Property name="text" type="java.lang.String" value="&gt;&gt; Pr&#xf3;ximo passo"/>
         <Property name="enabled" type="boolean" value="false"/>
       </Properties>
       <Events>
@@ -255,7 +254,7 @@
     </Component>
     <Component class="javax.swing.JButton" name="btnVerificar">
       <Properties>
-        <Property name="text" type="java.lang.String" value="Verificar"/>
+        <Property name="text" type="java.lang.String" value="Verificar algoritmo"/>
       </Properties>
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnVerificarActionPerformed"/>
