--- a/src/alog/view/FrmGui.form
+++ b/src/alog/view/FrmGui.form
@@ -159,6 +159,12 @@
                 <Column editable="false" title="Valor" type="java.lang.Object"/>
               </Table>
             </Property>
+            <Property name="selectionBackground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+              <Color blue="0" green="ff" id="green" palette="1" red="0" type="palette"/>
+            </Property>
+            <Property name="selectionForeground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+              <Color blue="0" green="0" id="black" palette="1" red="0" type="palette"/>
+            </Property>
           </Properties>
         </Component>
       </SubComponents>
@@ -247,6 +253,7 @@
     <Component class="javax.swing.JButton" name="btnInputEnter">
       <Properties>
         <Property name="text" type="java.lang.String" value="Confirmar"/>
+        <Property name="enabled" type="boolean" value="false"/>
       </Properties>
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnInputEnterActionPerformed"/>
