Adiciona rotinas de execução de expressão aritmética (não funcional)

--- a/src/alog/view/FrmGui.form
+++ b/src/alog/view/FrmGui.form
@@ -32,7 +32,7 @@
                           <Group type="102" attributes="0">
                               <Component id="jScrollPane3" min="-2" pref="443" max="-2" attributes="0"/>
                               <EmptySpace max="-2" attributes="0"/>
-                              <Component id="btnInputEnter" min="-2" pref="110" max="-2" attributes="0"/>
+                              <Component id="btnEntradaConfirma" min="-2" pref="110" max="-2" attributes="0"/>
                           </Group>
                       </Group>
                       <EmptySpace max="-2" attributes="0"/>
@@ -47,7 +47,6 @@
                           </Group>
                           <Component id="jScrollPane6" alignment="0" min="-2" pref="443" max="-2" attributes="0"/>
                           <Component id="jLabel2" alignment="0" min="-2" max="-2" attributes="0"/>
-                          <Component id="jScrollPane7" alignment="0" min="-2" pref="443" max="-2" attributes="0"/>
                           <Component id="jLabel3" alignment="0" min="-2" max="-2" attributes="0"/>
                           <Group type="102" alignment="0" attributes="0">
                               <Component id="btnVerificar" min="-2" pref="160" max="-2" attributes="0"/>
@@ -55,6 +54,11 @@
                               <Component id="btnInicioPerc" min="-2" max="-2" attributes="0"/>
                               <EmptySpace max="-2" attributes="0"/>
                               <Component id="btnProxPerc" min="-2" max="-2" attributes="0"/>
+                          </Group>
+                          <Group type="102" alignment="0" attributes="0">
+                              <Component id="jScrollPane7" min="-2" pref="443" max="-2" attributes="0"/>
+                              <EmptySpace max="-2" attributes="0"/>
+                              <Component id="btnProcContinuar" min="-2" pref="110" max="-2" attributes="0"/>
                           </Group>
                       </Group>
                       <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
@@ -85,13 +89,16 @@
               </Group>
               <EmptySpace max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                  <Component id="btnInputEnter" pref="41" max="32767" attributes="0"/>
+                  <Component id="btnEntradaConfirma" pref="41" max="32767" attributes="0"/>
                   <Component id="jScrollPane3" max="32767" attributes="0"/>
               </Group>
               <EmptySpace max="-2" attributes="0"/>
               <Component id="jLabel2" min="-2" max="-2" attributes="0"/>
               <EmptySpace max="-2" attributes="0"/>
-              <Component id="jScrollPane7" min="-2" pref="41" max="-2" attributes="0"/>
+              <Group type="103" groupAlignment="0" attributes="0">
+                  <Component id="jScrollPane7" min="-2" pref="41" max="-2" attributes="0"/>
+                  <Component id="btnProcContinuar" max="32767" attributes="0"/>
+              </Group>
               <EmptySpace max="-2" attributes="0"/>
               <Component id="jLabel3" min="-2" max="-2" attributes="0"/>
               <EmptySpace max="-2" attributes="0"/>
@@ -250,13 +257,13 @@
         <Property name="text" type="java.lang.String" value="Sa&#xed;da"/>
       </Properties>
     </Component>
-    <Component class="javax.swing.JButton" name="btnInputEnter">
+    <Component class="javax.swing.JButton" name="btnEntradaConfirma">
       <Properties>
         <Property name="text" type="java.lang.String" value="Confirmar"/>
         <Property name="enabled" type="boolean" value="false"/>
       </Properties>
       <Events>
-        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnInputEnterActionPerformed"/>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnEntradaConfirmaActionPerformed"/>
       </Events>
     </Component>
     <Component class="javax.swing.JButton" name="btnVerificar">
@@ -273,6 +280,15 @@
           <Font name="Tahoma" size="12" style="1"/>
         </Property>
       </Properties>
+    </Component>
+    <Component class="javax.swing.JButton" name="btnProcContinuar">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="Continuar"/>
+        <Property name="enabled" type="boolean" value="false"/>
+      </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnProcContinuarActionPerformed"/>
+      </Events>
     </Component>
   </SubComponents>
 </Form>
