--- a/src/alog/view/FrmGui.form
+++ b/src/alog/view/FrmGui.form
@@ -124,8 +124,7 @@
                       <Group type="103" alignment="1" groupAlignment="0" attributes="0">
                           <Component id="btnVerificar" min="-2" pref="200" max="-2" attributes="0"/>
                           <Group type="102" attributes="0">
-                              <Component id="btnInicioPerc" min="-2" max="-2" attributes="0"/>
-                              <EmptySpace max="-2" attributes="0"/>
+                              <EmptySpace min="-2" pref="79" max="-2" attributes="0"/>
                               <Component id="btnProxPerc" min="-2" max="-2" attributes="0"/>
                           </Group>
                       </Group>
@@ -176,10 +175,7 @@
                       <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
                       <Component id="btnVerificar" min="-2" pref="38" max="-2" attributes="0"/>
                       <EmptySpace max="-2" attributes="0"/>
-                      <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                          <Component id="btnInicioPerc" alignment="1" pref="41" max="32767" attributes="0"/>
-                          <Component id="btnProxPerc" alignment="1" max="32767" attributes="0"/>
-                      </Group>
+                      <Component id="btnProxPerc" min="-2" pref="41" max="-2" attributes="0"/>
                   </Group>
               </Group>
               <EmptySpace min="-2" max="-2" attributes="0"/>
@@ -214,15 +210,6 @@
         </Component>
       </SubComponents>
     </Container>
-    <Component class="javax.swing.JButton" name="btnInicioPerc">
-      <Properties>
-        <Property name="text" type="java.lang.String" value="|&lt; In&#xed;cio"/>
-        <Property name="enabled" type="boolean" value="false"/>
-      </Properties>
-      <Events>
-        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnInicioPercActionPerformed"/>
-      </Events>
-    </Component>
     <Component class="javax.swing.JButton" name="btnProxPerc">
       <Properties>
         <Property name="text" type="java.lang.String" value="&gt;&gt; Pr&#xf3;ximo passo"/>
