--- a/src/fatec/alg/gui/FrmSobre.form
+++ b/src/fatec/alg/gui/FrmSobre.form
@@ -160,7 +160,7 @@
         <Property name="horizontalAlignment" type="int" value="0"/>
         <Property name="text" type="java.lang.String" value="Projeto hospedado em https://github.com/cslclaman/AlogInterpreter"/>
         <Property name="cursor" type="java.awt.Cursor" editor="org.netbeans.modules.form.editors2.CursorEditor">
-          <Color id="Cursor Padr&#xe3;o"/>
+          <Color id="Cursor em Forma de M&#xe3;o"/>
         </Property>
       </Properties>
       <Events>
